deploy/k8s/vampi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: vampi-demo
    com.noname.alanc.vampi/vulnerable: true
  name: vampi-demo-svc
  namespace: alanc-vampi
spec:
  ports:
    - name: "vampi"
      port: 5000
  selector:
    io.kompose.service: vampi-demo
